
* Flow Graph colored data arrows. (ws-buglink:12065[])

* Capture File Properties under Statistics Grayed Out after Stopping a Capture. (ws-buglink:12071[])

* Qt: Hidden columns displayed during live capture. (ws-buglink:12377[])

* Bad description for NBSS error code 0x81. (ws-buglink:12835[])

* Live capture from USBPcap fails immediately. (ws-buglink:12846[])

* Cannot decrypt EAP-TTLS traffic (not recognized as conversation). (ws-buglink:12879[])

* Export packet dissections Option disabled after capturing traffic. (ws-buglink:12898[])

* Failure to open file named with Chinese or other multibyte characters. (ws-buglink:12900[])

* k12 text file format causes errors. (ws-buglink:12903[])

* File | File Set | List Files dialog is blank. (ws-buglink:12904[])

* Decoding/Display of an INAP CONNECT message goes wrong for the Destination Routing Address part. (ws-buglink:12911[])

* TLS padding extension dissector length parsing bug. (ws-buglink:12922[])

* Diameter dictionary bugs. (ws-buglink:12927[])

* File open from menu bar with filter in place causes Wireshark to crash. (ws-buglink:12929[])

* CMake builds don't register the NCP dissector, so the resulting Wireshark/TShark crashes with NCP packets. (ws-buglink:12945[])

* Unable to capture USBPcap trace using tshark with extcap built. (ws-buglink:12949[])

* Multiple PortableApps instances can once again be run at the same time.

=== New and Updated Features

There are no new features in this release.

//=== Removed Dissectors

=== New File Format Decoding Support

There are no new file formats in this release.

=== New Protocol Support

There are no new protocols in this release.

=== Updated Protocol Support

--sort-and-group--
6LowPAN
BT L2CAP
CIP
DCOM IRemUnknown
Diameter
DMP
EAP
ISUP
NBT
NCP
NetFlow
SSL / TLS
U3V
--sort-and-group--

=== New and Updated Capture File Support

//There is no new or updated capture file support in this release.
--sort-and-group--
Ascend
K12
--sort-and-group--
